--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "firebase": "^8.8.1",
+    "vue": "^3.0.0",
+    "vuefire": "^2.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
